# fastapi-sendparcel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: api.md  conf.py  configuration.md  index.md  quickstart.md
docs/plans/: 2026-02-15-fastapi-critical-fixes.md  2026-02-15-fastapi-example-and-docs.md  2026-02-15-fastapi-testing.md
example/: README.md  app.py  delivery_sim.py  example.db  models.py  pyproject.toml
example/templates/: base.html  delivery_gateway.html  home.html  order_detail.html  result.html  shipment_detail.html
example/templates/partials/: sim_panel.html
examples/: app.py
src/fastapi_sendparcel/: __init__.py  config.py  dependencies.py  exceptions.py  protocols.py  registry.py  retry.py  router.py  schemas.py
src/fastapi_sendparcel/contrib/: __init__.py
src/fastapi_sendparcel/contrib/sqlalchemy/: __init__.py  models.py  repository.py  retry_store.py
src/fastapi_sendparcel/routes/: __init__.py  callbacks.py  shipments.py
tests/: conftest.py  test_config.py  test_contrib_sqlalchemy.py  test_contrib_sqlalchemy_models.py  test_contrib_sqlalchemy_repository.py  test_contrib_sqlalchemy_retry_store.py  test_dependencies.py  test_example_app.py  test_exceptions.py  test_integration.py  test_package_metadata.py  test_protocols.py  test_public_api.py  test_registry.py  test_retry.py  test_router.py  test_routes_callbacks.py  test_routes_flow.py  test_routes_shipments.py  test_schemas.py
