[project]
name = "fastapi-sendparcel"
version = "0.1.0"
description = "FastAPI adapter for python-sendparcel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Dominik Kozaczko", email = "dominik@kozaczko.info" }]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.0.0",
  "python-sendparcel>=0.1.0",
  "anyio>=4.0",
]
keywords = ["fastapi", "shipping", "parcel", "delivery", "sendparcel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sendparcel/fastapi-sendparcel"
Documentation = "https://fastapi-sendparcel.readthedocs.io/"
Repository = "https://github.com/sendparcel/fastapi-sendparcel"
Changelog = "https://github.com/sendparcel/fastapi-sendparcel/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/sendparcel/fastapi-sendparcel/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.9.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.22",
]
docs = [
  "sphinx>=7.0",
  "furo>=2024.0",
  "myst-parser>=3.0",
  "sphinx-autodoc2>=0.5",
]
sqlalchemy = [
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_sendparcel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["N818", "B008", "B027"]

[tool.uv.sources]
python-sendparcel = { path = "../python-sendparcel" }

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "mypy>=1.19.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
